--- a/progetto-gustotram/public/index.html
+++ b/progetto-gustotram/public/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <title>CENE IN MOVIMENTO - SLURP</title>
   </head>
   <body>
     <noscript>
@@ -18,6 +18,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
